--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarCantante.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarCantante.form
@@ -45,76 +45,80 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jblIdBuscarCantante" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jblNombreBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="jblNombreBuscarCantante" min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="jblIdBuscarCantante" min="-2" max="-2" attributes="0"/>
                       <Component id="jblApellidoBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
                       <Component id="jblEdadBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="jblNacionalidadBuscarCantante" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                      <Component id="jblNacionalidadBuscarCantante" min="-2" pref="86" max="-2" attributes="0"/>
                       <Component id="jblSalarioBuscarCantante" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
-                      <Component id="jblNombreArtisticoBuscarCantante" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
+                      <Component id="jblNombreArtisticoBuscarCantante" min="-2" pref="118" max="-2" attributes="0"/>
                       <Component id="jblGeneroMusical" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
                       <Component id="jblNumeroSencillosBuscarCantante" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
-                      <Component id="jblNumeroConciertosBuscarCantante" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
-                      <Component id="jblNumeroGirasBuscarCantante" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
+                      <Component id="jblNumeroConciertosBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
+                      <Component id="jblNumeroGirasBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="txtNumeroGiras" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtNumeroConciertos" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtNumeroSencillos" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtGeneroMusical" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtNombreArtistico" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtSalario" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtNacionalidad" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtEdad" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtApellido" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtNombre" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
-                      <Component id="txtID" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="162" max="-2" attributes="0"/>
+                          <Component id="bntAceptar" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="txtNombre" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtID" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtApellido" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtEdad" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtNacionalidad" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtSalario" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtNombreArtistico" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtGeneroMusical" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtNumeroSencillos" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtNumeroConciertos" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                              <Component id="txtNumeroGiras" min="-2" pref="164" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="bntAceptar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jblIdBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txtID" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jblNombreBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jblApellidoBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txtApellido" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jblEdadBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txtEdad" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="jblNacionalidadBuscarCantante" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="txtNacionalidad" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblIdBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtID" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblNombreBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblApellidoBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtApellido" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblEdadBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtEdad" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblNacionalidadBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNacionalidad" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -127,31 +131,37 @@
                               <Component id="txtNombreArtistico" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblGeneroMusical" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtGeneroMusical" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jblGeneroMusical" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtGeneroMusical" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jblNumeroSencillosBuscarCantante" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNumeroSencillos" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNumeroSencillosBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNumeroSencillos" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jblNumeroConciertosBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNumeroConciertos" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jblNumeroConciertosBuscarCantante" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jblNumeroGirasBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNumeroGiras" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="txtNumeroConciertos" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jblNumeroGirasBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtNumeroGiras" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="bntAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -293,6 +303,26 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
           </Events>
         </Component>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTable" name="jTable1">
+              <Properties>
+                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+                  <Table columnCount="3" rowCount="4">
+                    <Column editable="true" title="Codigo" type="java.lang.Object"/>
+                    <Column editable="true" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="true" title="A&#xf1;o de Lanzamiento" type="java.lang.Object"/>
+                  </Table>
+                </Property>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
