--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/CrearCantante.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/CrearCantante.form
@@ -44,13 +44,6 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="btnCrearCantante" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
-              </Group>
               <Group type="102" attributes="0">
                   <Component id="jblImagen" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -70,18 +63,23 @@
                               <Component id="jblNumeroGirasCrearCantante" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="txtNumeroGiras" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtNumeroConciertos" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtNumeroSencillos" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtGeneroMusical" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtNombreArtistico" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtSalario" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtNacionalidad" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtEdad" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtApellido" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtNombre" min="-2" pref="164" max="-2" attributes="0"/>
-                              <Component id="txtID" min="-2" pref="164" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="btnCrearCantante" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                  <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="cbxGeneroMusical" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNumeroSencillos" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNombreArtistico" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtSalario" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNacionalidad" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtEdad" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtApellido" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNombre" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtID" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNumeroConciertos" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtNumeroGiras" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -89,7 +87,7 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="148" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" pref="27" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -113,49 +111,55 @@
                               </Group>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNombreCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNumeroConciertos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jblNombreCrearCantante" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNombre" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                                  <Component id="jblApellidoCrearCantante" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                                  <Component id="jblEdadCrearCantante" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="jblNacionalidadCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtNacionalidad" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="jblSalarioCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtSalario" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jblNombreArCrearCantante" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtNombreArtistico" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                  <Component id="txtApellido" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="txtEdad" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblApellidoCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblEdadCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtApellido" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNacionalidadCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtEdad" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblSalarioCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNacionalidad" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNombreArCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtSalario" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblGeneroMusicalCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNombreArtistico" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNumeroSencillosCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtGeneroMusical" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jblNumeroConciertosCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNumeroSencillos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Component id="jblGeneroMusicalCrearCantante" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="jblNumeroSencillosCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtNumeroSencillos" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="jblNumeroConciertosCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtNumeroConciertos" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Component id="cbxGeneroMusical" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -164,7 +168,7 @@
                       <Component id="jblNumeroGirasCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtNumeroGiras" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="57" max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnCrearCantante" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -244,8 +248,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtNombreArtistico">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtGeneroMusical">
-        </Component>
         <Component class="javax.swing.JTextField" name="txtNumeroSencillos">
         </Component>
         <Component class="javax.swing.JTextField" name="txtNumeroConciertos">
@@ -276,6 +278,27 @@
               <Image iconType="3" name="/imagenes/Persona.png"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="cbxGeneroMusical">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="10">
+                <StringItem index="0" value="-Seleccione el G&#xe9;nero Musical-"/>
+                <StringItem index="1" value="Reggaeton"/>
+                <StringItem index="2" value="Trap"/>
+                <StringItem index="3" value="Pop"/>
+                <StringItem index="4" value="Rap"/>
+                <StringItem index="5" value="Rock"/>
+                <StringItem index="6" value="Bachata"/>
+                <StringItem index="7" value="Cumbia"/>
+                <StringItem index="8" value="Salsa"/>
+                <StringItem index="9" value="Otro"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
