--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cancion/AgregarCancion.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cancion/AgregarCancion.form
@@ -82,18 +82,15 @@
                   </Group>
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jblDuracionCancionAgregarCancion" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="txtDuracionCancion" min="-2" pref="152" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="113" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jblLetraAgregarCancion" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="txtLetra" min="-2" pref="152" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jblDuracionCancionAgregarCancion" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jblLetraAgregarCancion" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="txtLetra" min="-2" pref="152" max="-2" attributes="0"/>
+                      <Component id="txtDuracionCancion" min="-2" pref="152" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="0" pref="113" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
