--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/ListarCantante.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/ListarCantante.form
@@ -42,9 +42,14 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jpanelA">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="0" red="66" type="rgb"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="LISTAR CANTANTE"/>
+            <TitledBorder title="LISTAR CANTANTE">
+              <Font PropertyName="font" name="Segoe UI" size="12" style="1"/>
+            </TitledBorder>
           </Border>
         </Property>
       </Properties>
